; ModuleID = '/home/carl/AnghaBench/RetroArch/griffin/extr_..libretro-commonformatsimage_texture.c_image_texture_set_color_shifts.c'
source_filename = "/home/carl/AnghaBench/RetroArch/griffin/extr_..libretro-commonformatsimage_texture.c_image_texture_set_color_shifts.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.texture_image = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @image_texture_set_color_shifts(i32* %0, i32* %1, i32* %2, i32* %3, %struct.texture_image* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca %struct.texture_image*, align 8
  store i32* %0, i32** %7, align 8
  store i32* %1, i32** %8, align 8
  store i32* %2, i32** %9, align 8
  store i32* %3, i32** %10, align 8
  store %struct.texture_image* %4, %struct.texture_image** %11, align 8
  %12 = load i32*, i32** %10, align 8
  store i32 24, i32* %12, align 4
  %13 = load i32*, i32** %7, align 8
  store i32 16, i32* %13, align 4
  %14 = load i32*, i32** %8, align 8
  store i32 8, i32* %14, align 4
  %15 = load i32*, i32** %9, align 8
  store i32 0, i32* %15, align 4
  %16 = load %struct.texture_image*, %struct.texture_image** %11, align 8
  %17 = getelementptr inbounds %struct.texture_image, %struct.texture_image* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %23

20:                                               ; preds = %5
  %21 = load i32*, i32** %7, align 8
  store i32 0, i32* %21, align 4
  %22 = load i32*, i32** %9, align 8
  store i32 16, i32* %22, align 4
  store i32 1, i32* %6, align 4
  br label %24

23:                                               ; preds = %5
  store i32 0, i32* %6, align 4
  br label %24

24:                                               ; preds = %23, %20
  %25 = load i32, i32* %6, align 4
  ret i32 %25
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
